--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,5 @@
+version 1.0.2 :
+ Fix incorrect char widths with using Optifine and Smooth Font.
 version 1.0.1 :
  Fix bug that line-breaking algorithms are not applied to chat text.
 version 1.0.0 :
