--- a/src/main/resources/assets/better_line_break/lang/en_US.lang
+++ b/src/main/resources/assets/better_line_break/lang/en_US.lang
@@ -1,2 +1,3 @@
-better_line_break.config.lineBreakAlgorithm=Line Break Algorithm
-better_line_break.config.lineBreakAlgorithm.tooltip=The algorithm used for line breaks
+better_line_break.config.Client.tooltip=Client Settings(Rendering, resources, etc.)
+better_line_break.config.Client.LineBreakAlgorithm=Line Break Algorithm
+better_line_break.config.Client.LineBreakAlgorithm.tooltip=The algorithm used for line breaks
